--- a/partials/nav-megamenu/about.hbs
+++ b/partials/nav-megamenu/about.hbs
@@ -1,5 +1,5 @@
 <li class="nav-item dropdown ">
-    <a class="nav-link" href="#">
+    <a class="nav-link animated-underscore" href="#">
     About
     </a>
     <!-- Dropdown menu -->
