--- a/partials/todolist.hbs
+++ b/partials/todolist.hbs
@@ -1,4 +1,11 @@
 <script>
     // this is an alert that display todo list. It's for dev purpose only.
-    alert("Todo:\n\t[ ] footer style\n\t[ ] slider\n\t[ ] megamenu content\n\t")
+    /*
+    alert("Todo:\n\t\
+        [ ] slider\n\t\
+        [ ] megamenu content\n\t\
+        [ ] tags in post (ref: Medium.com) and indivisual tag list\n\t\
+        [ ] page for sections (about, research brief, ...)\n\t\
+    ")
+    */
 </script>
