--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -419,11 +419,12 @@ ol {
 li {
     padding-left: 0.3em;
     line-height: 1.6em;
-}
-
-li + li {
     margin-top: 0.5em;
 }
+
+/* li + li {
+    margin-top: 0.5em;
+} */
 
 dt {
     float: left;
