--- a/default.hbs
+++ b/default.hbs
@@ -16,6 +16,9 @@
     {{!-- stylesheet for bootstrap --}}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
+    {{!-- stylesheet for custom setting --}}
+    <link rel="stylesheet" type="text/css" href="{{asset "built/custom.css"}}" />
+
     {{!-- stylesheet for megamenu --}}
     <link rel="stylesheet" type="text/css" href="{{asset "built/megamenu.css"}}" />
 
@@ -63,7 +66,7 @@
     </div>
 
     {{!-- The global footer at the very bottom of the screen --}}
-    {{> site_footer}}
+    {{> site-footer}}
 
 </div>
 {{!-- /.viewport --}}
