dummy slider finished

--- a/assets/built/carousel-slider.css
+++ b/assets/built/carousel-slider.css
@@ -1,2 +1,2 @@
 .carousel{background:#fff;border:.2rem solid #000;border-radius:5px;height:100%;margin-bottom:30px;margin-top:30px;min-height:300px;width:100%}.carousel .carousel-item{height:400px}.carousel-item img{left:0;min-height:400px;position:absolute;top:0}@media (min-width:1200px){.carousel .carousel-item{height:600px}.carousel-item img{min-height:600px}}.carousel .carousel-caption{background:rgb(0,0,0,.5);border-radius:1rem;font-size:2rem}
-/*# sourceMappingURL=slider.css.map */
+/*# sourceMappingURL=carousel-slider.css.map */
