--- a/default.hbs
+++ b/default.hbs
@@ -22,8 +22,8 @@
     {{!-- stylesheet for megamenu --}}
     <link rel="stylesheet" type="text/css" href="{{asset "built/megamenu.css"}}" />
 
-    {{!-- stylesheet for slider --}}
-    <link rel="stylesheet" type="text/css" href="{{asset "built/slider.css"}}" />
+    {{!-- stylesheet for carousel slider --}}
+    <link rel="stylesheet" type="text/css" href="{{asset "built/carousel-slider.css"}}" />
 
     {{!-- stylesheet for fontawesome --}}
     <script src="https://kit.fontawesome.com/244878b4f0.js" crossorigin="anonymous"></script>
