--- a/index.hbs
+++ b/index.hbs
@@ -51,7 +51,7 @@ into the {body} of the default.hbs template --}}
 <main id="site-main" class="site-main outer">
 <div class="inner posts">
 
-    {{> "featured-slide"}}
+    {{> "carousel-slider"}}
 
     {{> "post-feed"}}
 
