--- a/assets/css/carousel-slider.css
+++ b/assets/css/carousel-slider.css
@@ -3,15 +3,30 @@
     height: 100%;
     background: #ffffff;
     margin-top: 30px;
+    margin-bottom: 30px;
     min-height: 300px;
     border: black solid 0.2rem;
     border-radius: 5px;
 }
 
-.carousel .carousel-image {
-    width: 100%;
-    height: 100%;
+.carousel .carousel-item {
+    height: 400px;
+}
+  
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
     min-height: 400px;
+}
+
+@media (min-width: 1200px) {
+    .carousel .carousel-item {
+        height: 600px;
+    }
+    .carousel-item img {
+        min-height: 600px;
+    }
 }
 
 .carousel .carousel-caption {
