--- a/default.hbs
+++ b/default.hbs
@@ -93,6 +93,17 @@ $(document).ready(function () {
 {{!-- Scripts for Bootstraps --}}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
+<script type="text/javascript">
+// start the carousel and set its interval
+$(document).ready(function(){
+    $(".carousel .carousel-item").first().addClass("active");
+    $(".carousel").carousel({
+        interval: 5000,
+        pause: "hover"
+});
+})
+</script>
+
 {{!-- Ghost outputs required functional scripts with this tag - it should always be the last thing before the closing body tag --}}
 {{ghost_foot}}
 
