--- a/partials/carousel-slider.hbs
+++ b/partials/carousel-slider.hbs
@@ -5,34 +5,47 @@
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
   </div>
-
 
   <!-- Inner -->
   <div class="carousel-inner">
 
-    <!-- select most reacent 5 featured posts and put into slider -->
-    {{#get "posts" filter="featured:true" limit="5" order="published_at DESC"}}
+    {{#get "posts" filter="featured:true,featured:false" limit="5"}}
       {{#foreach posts}}
-        <div class="carousel-item active">
+          <div class="carousel-item">
           {{!-- <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(15).webp" class="d-block w-100" alt="Sunset Over the City"/> --}}
-          <img class="d-block w-100" 
-              srcset="/content/images/size/w300/2023/02/sunshine.jpg 300w,
-                        /content/images/size/w600/2023/02/sunshine.jpg 600w,
-                        /content/images/size/w1000/2023/02/sunshine.jpg 1000w,
-                        /content/images/size/w2000/2023/02/sunshine.jpg 2000w" 
-              src="/content/images/size/w600/2023/02/sunshine.jpg" 
-              alt="Testing Post No.001 About" 
-              loading="lazy">
+          {{#if feature_image}}
+              <a class="d-block w-100" href="{{url}}">
+                  {{!-- This is a responsive image, it loads different sizes depending on device
+                  https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
+                  <img class="post-card-image"
+                      srcset="{{img_url feature_image size="s"}} 300w,
+                              {{img_url feature_image size="m"}} 600w,
+                              {{img_url feature_image size="l"}} 1000w,
+                              {{img_url feature_image size="xl"}} 2000w"
+                      sizes="(max-width: 1000px) 400px, 800px"
+                      src="{{img_url feature_image size="m"}}"
+                      alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}"
+                      loading="lazy"
+                  />
+              </a>
+          {{!-- if no feature image, load dummy image instead --}}
+          {{else}}
+              <a class="d-block w-100" href="{{url}}">
+                <img src="{{asset image/dummy_carousel_bg.webp}}" 
+                      class="d-block w-100" 
+                      alt="Cliff Above a Stormy Sea"/>
+              </a>
+          {{/if}}
           <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+            <h5 class="post-card-title">{{title}}</h5>
+            <p class="post-card-excerpt">{{#if excerpt}}{{excerpt}}{{/if}}</p>
           </div>
         </div>      
       {{/foreach}}
     {{/get}}  
-
-
   </div>
   <!-- Inner -->
 
