--- a/index.hbs
+++ b/index.hbs
@@ -53,7 +53,7 @@ into the {body} of the default.hbs template --}}
 
     {{> "carousel-slider"}}
 
-    {{> "post-feed"}}
+    {{> "homepage-post-feed"}}
 
     {{pagination}}
 
