--- a/assets/css/carousel-slider.css
+++ b/assets/css/carousel-slider.css
@@ -1,5 +1,5 @@
 .carousel {
-    width: 100%;
+    width: 80%;
     height: 100%;
     background: #ffffff;
     margin-top: 30px;
@@ -7,6 +7,8 @@
     min-height: 300px;
     border: black solid 0.2rem;
     border-radius: 5px;
+    left: 50%;
+    transform: translate(-50%);
 }
 
 .carousel .carousel-item {
@@ -18,6 +20,11 @@
     top: 0;
     left: 0;
     min-height: 400px;
+    width: 100%;
+}
+
+.carousel-item .post-card-excerpt {
+    overflow: hidden;
 }
 
 @media (min-width: 1200px) {
@@ -26,6 +33,31 @@
     }
     .carousel-item img {
         min-height: 600px;
+    }
+}
+
+@media (max-width: 576px) {
+    .carousel {
+        height: 200px;
+        min-height: 200px;
+    }
+    .carousel .carousel-item {
+        height: 200px;
+    }
+    .carousel-item img {
+        min-height: 200px;
+    }
+
+    .carousel .d-none {
+        display: block !important;
+    }
+
+    .carousel .carousel-indicators {
+        margin-bottom: 0.2rem;
+    }
+
+    .carousel .post-card-title {
+        font-size: 1.5rem !important;
     }
 }
 
