--- a/partials/post-card.hbs
+++ b/partials/post-card.hbs
@@ -1,46 +1,15 @@
-{{!-- This is a partial file used to generate a post "card"
-which templates loop over to generate a list of posts. --}}
-
-{{!-- <article class="post-card {{post_class}}{{#match @custom.feed_layout "Classic"}}{{#is "home"}}{{#has index="0"}} post-card-large{{/has}}{{#has index="1,2"}} dynamic{{/has}}{{/is}}{{/match}}{{#match @custom.feed_layout "Grid"}} keep-ratio{{/match}}{{#match @custom.feed_layout "List"}}{{#is "home, paged"}} post-card-large{{/is}}{{/match}}{{#unless access}} post-access-{{visibility}}{{/unless}}"> --}}
-{{!-- <article class="post-card 
-{{post_class}}
-    {{#match @custom.feed_layout "Classic"}}
-        {{#is "home"}}
-            {{#has index="0"}}
-                 post-card-large
-            {{/has}}
-            {{#has index="1,2"}}
-                 dynamic
-            {{/has}}
-        {{/is}}
-    {{/match}}
-    {{#match @custom.feed_layout "Grid"}}
-         keep-ratio
-    {{/match}}
-    {{#match @custom.feed_layout "List"}}
-        {{#is "home, paged"}}
-             post-card-large
-        {{/is}}
-    {{/match}}
-    {{#unless access}}
-         post-access-{{visibility}}
-    {{/unless}}"> --}}
-
 <article class="post-card ">
-
     <div class="post-card-content">
-
+        <div class="post-card-tags">
+            {{#primary_tag}}
+                <a class="post-card-primary-tag" href="{{url}}" >{{name}}</a>
+            {{/primary_tag}}
+            {{#if featured}}
+                <span class="post-card-featured">{{> "icons/fire"}} Featured</span>
+            {{/if}}
+        </div>
         <a class="post-card-content-link" href="{{url}}">
-            <header class="post-card-header">
-                <div class="post-card-tags">
-                    {{#primary_tag}}
-                        <span class="post-card-primary-tag">{{name}}</span>
-                    {{/primary_tag}}
-                    {{#if featured}}
-                        <span class="post-card-featured">{{> "icons/fire"}} Featured</span>
-                    {{/if}}
-                </div>
-                <h2 class="post-card-title">
+            <h2 class="post-card-title">
                     {{#unless access}}
                     {{^has visibility="public"}}
                         {{#unless feature_image}}
@@ -49,12 +18,13 @@ which templates loop over to generate a list of posts. --}}
                     {{/has}}
                     {{/unless}}
                     {{title}}
-                </h2>
-            </header>
+            </h2>
             {{#if excerpt}}
-                <div class="post-card-excerpt">{{excerpt}}</div>
+            <div class="post-card-excerpt">{{excerpt}}</div>
             {{/if}}
         </a>
+
+
 
         <footer class="post-card-meta">
             <time class="post-card-meta-date" datetime="{{date format="YYYY-MM-DD"}}">{{date}}</time>
@@ -65,7 +35,6 @@ which templates loop over to generate a list of posts. --}}
                 {{comment_count}}
             {{/if}}
         </footer>
-
     </div>
 
     {{#if feature_image}}
