--- a/partials/carousel-slider.hbs
+++ b/partials/carousel-slider.hbs
@@ -37,7 +37,7 @@
                       alt="Cliff Above a Stormy Sea"/>
               </a>
           {{/if}}
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-md-block">
             <h5 class="post-card-title">{{title}}</h5>
             <p class="post-card-excerpt">{{#if excerpt}}{{excerpt}}{{/if}}</p>
           </div>
