--- a/partials/nav-megamenu/about.hbs
+++ b/partials/nav-megamenu/about.hbs
@@ -6,135 +6,52 @@
     <div class="dropdown-menu mt-0" aria-labelledby="navbarDropdown" style="position: absolute; inset: 0px auto auto 0px;;" data-popper-placement="bottom-start" data-mdb-popper="null">
     <div class="container">
         <div class="row my-4">
-        <div class="col-md-6 col-xl-3 mb-3 mb-xl-0">
+        <div class="col-md-12 col-lg-3 mb-3 mb-lg-0">
             <div class="pt-2">
             <p class="text-uppercase font-weight-bold">
-                Explicabo voluptas
+                Our Mission
             </p>
-            <div class="bg-image hover-overlay shadow-1-strong rounded ripple mb-4" data-mdb-ripple-color="light">
-                <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/113.webp" class="img-fluid">
-                <a href="#!">
-                <div class="mask" style="
-                                background-color: rgba(
-                                    251,
-                                    251,
-                                    251,
-                                    0.15
-                                );
-                                "></div>
-                </a>
-            </div>
-            <div class="d-flex justify-content-between">
-                <a href="" class="text-info"><i class="fas fa-plane pe-1"></i>Travels</a>
-                <p><u>15.07.2020</u></p>
-            </div>
-            <a href="" class="text-dark">
-                <h5>This is title of the news</h5>
-                <p>
-                Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Odit, iste aliquid.
-                Sed id nihil magni, sint vero
-                provident esse numquam perferendis
-                ducimus dicta adipisci iusto nam
-                temporibus modi animi laboriosam?
-                </p>
-            </a>
+            <p>
+                At [Company Name], our mission is to [insert mission statement here].
+            </p>
             </div>
         </div>
-        <div class="col-md-6 col-xl-3 mb-3 mb-xl-0">
+        <div class="col-md-12 col-lg-3 mb-3 mb-lg-0">
             <div class="pt-2">
             <p class="text-uppercase font-weight-bold">
-                Explicabo voluptas
+                Team
             </p>
-            <a href="" class="text-dark">
-                <div class="row mb-4 border-bottom pb-2">
-                <div class="col-3">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp" class="img-fluid shadow-1-strong rounded" alt="Hollywood Sign on The Hill">
-                </div>
-                <div class="col-9">
-                    <p class="mb-2">
-                    <strong>Lorem ipsum dolor sit
-                        amet</strong>
-                    </p>
-                    <p><u>15.07.2020</u></p>
-                </div>
-                </div>
-            </a>
-            <a href="" class="text-dark">
-                <div class="row mb-4 border-bottom pb-2">
-                <div class="col-3">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="img-fluid shadow-1-strong rounded" alt="Palm Springs Road">
-                </div>
-                <div class="col-9">
-                    <p class="mb-2">
-                    <strong>Lorem ipsum dolor sit
-                        amet</strong>
-                    </p>
-                    <p><u>15.07.2020</u></p>
-                </div>
-                </div>
-            </a>
-            <a href="" class="text-dark">
-                <div class="row mb-4 border-bottom pb-2">
-                <div class="col-3">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="img-fluid shadow-1-strong rounded" alt="Los Angeles Skyscrapers">
-                </div>
-                <div class="col-9">
-                    <p class="mb-2">
-                    <strong>Lorem ipsum dolor sit
-                        amet</strong>
-                    </p>
-                    <p><u>15.07.2020</u></p>
-                </div>
-                </div>
-            </a>
-            <a href="" class="text-dark">
-                <div class="row mb-4 border-bottom pb-2">
-                <div class="col-3">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" class="img-fluid shadow-1-strong rounded" alt="Skyscrapers">
-                </div>
-                <div class="col-9">
-                    <p class="mb-2">
-                    <strong>Lorem ipsum dolor sit
-                        amet</strong>
-                    </p>
-                    <p><u>15.07.2020</u></p>
-                </div>
-                </div>
-            </a>
+            <p>
+                Our team is composed of experienced professionals in the field of [insert field of expertise]. Together, we strive to achieve our mission and provide our clients with [insert benefits of working with the company].
+            </p>
             </div>
         </div>
-        <div class="col-md-6 col-xl-3 mb-3 mb-md-0">
+        <div class="col-md-12 col-lg-3 mb-3 mb-md-0">
             <div class="list-group list-group-flush">
             <p class="mb-0 list-group-item text-uppercase font-weight-bold">
-                Iste quaerato
+                Advisory Board
             </p>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Cras justo odio</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Est iure</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Praesentium</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Laboriosam</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Dolor sit</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Amet consectetur</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Cras justo odio</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Adipiscing elit</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of advisory board member]</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of advisory board member]</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of advisory board member]</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of advisory board member]</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of advisory board member]</a>
             </div>
         </div>
-        <div class="col-md-6 col-xl-3">
+        <div class="col-md-12 col-lg-3">
             <div class="list-group list-group-flush">
             <p class="mb-0 list-group-item text-uppercase font-weight-bold">
-                Cras justo odio
+                Experts
             </p>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Saepe</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Vel alias</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Sunt doloribus</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Cum dolores</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Perspiciatis quo</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Cras justo odio</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Laudantium maiores</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Provident dolor</a>
-            </div>
-        </div>
-        </div>
-    </div>
-    </div>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of expert]</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of expert]</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of expert]</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of expert]</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of expert]</a>
+</div>
+</div>
+</div>
+</div>
+</div>
+
 </li>
