--- a/partials/site-footer.hbs
+++ b/partials/site-footer.hbs
@@ -13,14 +13,7 @@
                     {{/if}}
                 </a>
                 <h5>Find Us</h5>
-                <div class="social-media">
-                    <a class="social-media-link" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="social-media-link" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="social-media-link" href="#"><i class="fab fa-instagram"></i></a>
-                    <a class="social-media-link"href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="social-media-link"href="#"><i class="fab fa-tiktok"></i></a>
-                    
-                </div>
+                {{> "social-media"}}
             </div>
             
             <div class="footer-right">
