--- a/post.hbs
+++ b/post.hbs
@@ -74,6 +74,10 @@ into the {body} tag of the default.hbs template --}}
 
     <section class="gh-content gh-canvas">
         {{content}}
+
+        {{!-- a collapsable display of pdf version of the post --}}
+        {{> "post-pdf"}}
+
     </section>
 
     {{#if comments}}
@@ -81,6 +85,7 @@ into the {body} tag of the default.hbs template --}}
             {{comments}}
         </section>
     {{/if}}
+
 </article>
 </main>
 
