--- a/default.hbs
+++ b/default.hbs
@@ -25,6 +25,11 @@
     {{!-- stylesheet for carousel slider --}}
     <link rel="stylesheet" type="text/css" href="{{asset "built/carousel-slider.css"}}" />
 
+    {{!-- stylesheet for tag-related display --}}
+    <link rel="stylesheet" type="text/css" href="{{asset "built/post-footer-tags.css"}}" />
+
+    {{!-- stylesheet for post-pdf --}}
+
     {{!-- stylesheet for fontawesome --}}
     <script src="https://kit.fontawesome.com/244878b4f0.js" crossorigin="anonymous"></script>
 
