--- a/assets/css/carousel-slider.css
+++ b/assets/css/carousel-slider.css
@@ -45,16 +45,22 @@
     }
 }
 
+@media (max-width: 767px) {
+    .carousel {
+        width: 100%;
+    }
+}
+
 @media (max-width: 575px) {
     .carousel {
-        height: 200px;
+        height: 250px;
         min-height: 200px;
     }
     .carousel .carousel-item {
-        height: 200px;
+        height: 250px;
     }
     .carousel-item img {
-        min-height: 200px;
+        min-height: 250px;
     }
 
     .carousel .d-none {
