--- a/assets/css/post-footer-tags.css
+++ b/assets/css/post-footer-tags.css
@@ -8,29 +8,35 @@
 }
 
 .post-footer .post-card-tags .post-card-tag {
-    background-color: #f5f5f5;
-    color: #666666;
-    border-radius: 2rem;
-    padding: 4px 12px;
-    margin-right: 8px;
-    display: inline-block;
-    font-size: 1.8rem;
-    line-height: 2;
-    transition: all 0.2s ease-in-out;
-  }
-  
-  .post-footer .post-card-tag {
-    color: inherit;
-    text-decoration: none;
-  }
+  background-color: #f5f5f5;
+  color: #666666;
+  border-radius: 2rem;
+  padding: 4px 12px;
+  margin-right: 8px;
+  display: inline-block;
+  font-size: 1.8rem;
+  line-height: 2;
+  transition: all 0.2s ease-in-out;
+}
 
-  .post-footer .post-card-tag:hover {
-    background-color: #007fff;
-    color: #ffffff;
-    cursor: pointer;
-  }
+.post-footer .post-card-tag {
+  color: inherit;
+  text-decoration: none;
+}
 
-  .post-footer .post-card-tag a {
-    color: inherit;
-    padding: 1rem;
+.post-footer .post-card-tag:hover {
+  background-color: #007fff;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.post-footer .post-card-tag a {
+  color: inherit;
+  padding: 1rem;
+}
+
+@media (max-width: 767px) {
+  .post-footer .article-tag {
+    width: 100%;
   }
+}
