--- a/partials/nav-megamenu/about.hbs
+++ b/partials/nav-megamenu/about.hbs
@@ -1,4 +1,6 @@
-<li class="nav-item dropdown ">
+<li class="nav-item dropdown">
+
+
     <a class="nav-link animated-underscore" href="#">
     About
     </a>
@@ -8,11 +10,13 @@
         <div class="row my-4">
         <div class="col-md-12 col-lg-3 mb-3 mb-lg-0">
             <div class="pt-2">
-            <p class="text-uppercase font-weight-bold">
-                Our Mission
-            </p>
+            <a href="/about">
+                <h5 class="text-uppercase font-weight-bold">
+                    Our Mission
+                </h5>
+            </a>
             <p>
-                At [Company Name], our mission is to [insert mission statement here].
+                Explore Chinese overseas engagement and its impact with our comprehensive dataset and mapping tools, providing a nuanced understanding of Global China's past, present, and future.
             </p>
             </div>
         </div>
