--- a/partials/nav-megamenu/about.hbs
+++ b/partials/nav-megamenu/about.hbs
@@ -1,61 +1,40 @@
 <li class="nav-item dropdown">
-
-
-    <a class="nav-link animated-underscore" href="#">
-    About
-    </a>
+    <a class="nav-link animated-underscore" href="#">About</a>
     <!-- Dropdown menu -->
     <div class="dropdown-menu mt-0" aria-labelledby="navbarDropdown" style="position: absolute; inset: 0px auto auto 0px;;" data-popper-placement="bottom-start" data-mdb-popper="null">
-    <div class="container">
-        <div class="row my-4">
-        <div class="col-md-12 col-lg-3 mb-3 mb-lg-0">
-            <div class="pt-2">
-            <a href="/about">
-                <h5 class="text-uppercase font-weight-bold">
-                    Our Mission
-                </h5>
-            </a>
-            <p>
-                Explore Chinese overseas engagement and its impact with our comprehensive dataset and mapping tools, providing a nuanced understanding of Global China's past, present, and future.
-            </p>
+        <div class="container">
+            <div class="row my-3 d-flex">
+                <div class="col-md-12 col-lg-4 mb-3 mb-lg-0" style="flex-grow: 1;">
+                    <div class="pt-2">
+                        <a href="/about">
+                            <h5 class="text-uppercase font-weight-bold">Our Mission</h5>
+                        </a>
+                        <p>
+                            Explore Chinese overseas engagement and its impact with our comprehensive dataset and mapping tools, providing a nuanced understanding of Global China's past, present, and future.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-12 col-lg-4 mb-3 mb-lg-0" style="flex-grow: 1;">
+                    <div class="pt-2">
+                        <a href="/team">
+                            <h5 class="text-uppercase font-weight-bold">Team</h5>
+                        </a>
+                        <p>
+                            Explore Our Staff Members Who Are Driving The Mission of Center for Global China Forward.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-12 col-lg-4" style="flex-grow: 1;">
+                    <div class="pt-2">
+                        <a href="/experts">
+                            <h5 class="text-uppercase font-weight-bold">Experts</h5>
+                        </a>
+                        <p>
+                            Experts contributing extensive knowledge and research to promote greater understanding and dialogue on China's global relations at the Center for Global China.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-md-12 col-lg-3 mb-3 mb-lg-0">
-            <div class="pt-2">
-            <p class="text-uppercase font-weight-bold">
-                Team
-            </p>
-            <p>
-                Our team is composed of experienced professionals in the field of [insert field of expertise]. Together, we strive to achieve our mission and provide our clients with [insert benefits of working with the company].
-            </p>
-            </div>
-        </div>
-        <div class="col-md-12 col-lg-3 mb-3 mb-md-0">
-            <div class="list-group list-group-flush">
-            <p class="mb-0 list-group-item text-uppercase font-weight-bold">
-                Advisory Board
-            </p>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of advisory board member]</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of advisory board member]</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of advisory board member]</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of advisory board member]</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of advisory board member]</a>
-            </div>
-        </div>
-        <div class="col-md-12 col-lg-3">
-            <div class="list-group list-group-flush">
-            <p class="mb-0 list-group-item text-uppercase font-weight-bold">
-                Experts
-            </p>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of expert]</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of expert]</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of expert]</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of expert]</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>[Insert name and title of expert]</a>
-</div>
-</div>
-</div>
-</div>
-</div>
-
+    </div>
 </li>
