pagination without style done

--- a/partials/nav-megamenu/about.hbs
+++ b/partials/nav-megamenu/about.hbs
@@ -6,6 +6,7 @@
             <div class="row my-3 d-flex">
                 <div class="col-md-12 col-lg-4 mb-3 mb-lg-0" style="flex-grow: 1;">
                     <div class="pt-2">
+                        <i class="fas fa-caret-right pe-2" aria-hidden="true"></i>
                         <a href="/about">
                             <h5 class="text-uppercase font-weight-bold">Our Mission</h5>
                         </a>
@@ -16,6 +17,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4 mb-3 mb-lg-0" style="flex-grow: 1;">
                     <div class="pt-2">
+                        <i class="fas fa-caret-right pe-2" aria-hidden="true"></i>
                         <a href="/team">
                             <h5 class="text-uppercase font-weight-bold">Team</h5>
                         </a>
@@ -26,6 +28,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4" style="flex-grow: 1;">
                     <div class="pt-2">
+                        <i class="fas fa-caret-right pe-2" aria-hidden="true"></i>
                         <a href="/experts">
                             <h5 class="text-uppercase font-weight-bold">Experts</h5>
                         </a>
