--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1292,21 +1292,48 @@ html.no-infinite-scroll .pagination {
     font-weight: 600;
 }
 
-.pagination .page-number {
+.pagination .page-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+}
+
+.pagination .page-list li {
+    margin: 0 0.5rem;
+}
+
+.pagination .page-list a {
+    display: block;
+    padding: 0.25rem 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 0.25rem;
+    text-decoration: none;
+    color: #333;
+}
+
+.pagination .page-list a:hover {
+    background-color: #ccc;
+}
+  
+  
+
+/* .pagination .page-number {
     grid-column-start: 2;
     color: var(--color-secondary-text);
-}
+} */
 
-.pagination .older-posts {
+/* .pagination .older-posts {
     grid-column-start: 3;
     text-align: right;
-}
+} */
 
-@media (max-width: 800px) {
+/* @media (max-width: 800px) {
     .pagination .page-number {
         display: none;
     }
-}
+} */
 
 
 /* 7. Single Post
