--- a/partials/site-footer.hbs
+++ b/partials/site-footer.hbs
@@ -26,13 +26,12 @@
                 <div class="footer-navbar">
                     <ul>
                         {{!-- <li class="first"><a href="#">About</a></li> --}}
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Maps</a></li>
-                        <li><a href="#">Research</a></li>
-                        <li><a href="#">Policy</a></li>
-                        <li><a href="#">Education</a></li>
-                        <li><a href="#">Events</a></li>
-                        <li><a href="#">Education</a></li>
+                        <li><a href="/about">About</a></li>
+                        <li><a href="/maps">Maps</a></li>
+                        <li><a href="/research">Research</a></li>
+                        {{!-- <li><a href="/policy">Policy</a></li> --}}
+                        {{!-- <li><a href="/education">Education</a></li> --}}
+                        <li><a href="/events">Events</a></li>
                     </ul>
                 </div>
 
